lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:22: error: type mismatch;
 found   : Unit
 required: Array[Int]
		while ((getX<Segment(0).x+1) || (getX>Segment(1).x-1)) {
                ^Lander:18: error: type mismatch;
 found   : Unit
 required: Array[Int]
	if (sens !=0) {
        ^